--- a/index.html
+++ b/index.html
@@ -1,66 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materialize</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- <link type="text/css" rel="stylesheet" href="./assets/css/materialize.min.css" media="screen,projection" /> -->
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Materialize</title>
+        <link rel="stylesheet" href="./styles.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- <link type="text/css" rel="stylesheet" href="./assets/css/materialize.min.css" media="screen,projection" /> -->
+    </head>
 
-<body>
+    <body>
 
-    <div class="container">
-        <h1>Colors</h1>
-        <div class="red white-text hoverable">div with color class</div>
-        <div class="blue white-text">div with color class</div>
-        <div class="green white-text darken-2">div with color class</div>
-        <div class="deep-purple black-text lighten-3">div with color class</div>
-        <h1>buttons</h1>
-        <button class="btn"><i class="large material-icons">book</i>read more</button>
-        <button class="btn">submit</button>
-        <button class="btn">read more</button>
-        <button class="btn">submit</button>
-        <a href="#" class="btn-floating red btn-large"><i class="large
-                    material-icons">clear</i></a>
-        <div class="fixed-action-btn">
+        <div class="container">
+            <h1>Colors</h1>
+            <div class="red white-text hoverable">div with color class</div>
+            <div class="blue white-text">div with color class</div>
+            <div class="green white-text darken-2">div with color class</div>
+            <div class="deep-purple black-text lighten-3">div with color class</div>
+            <h1>buttons</h1>
+            <button class="btn"><i class="large material-icons">book</i>read
+                more</button>
+            <button class="btn">submit</button>
+            <button class="btn">read more</button>
+            <button class="btn">submit</button>
             <a href="#" class="btn-floating red btn-large"><i class="large
+                    material-icons">clear</i></a>
+            <div class="fixed-action-btn">
+                <a href="#" class="btn-floating red btn-large"><i class="large
                         material-icons">mode_edit</i></a>
-            <ul>
-                <li><a href="#" class="btn-floating yellow btn-large"><i
-                            class="large material-icons">insert_chart</i></a></li>
-                <li><a href="#" class="btn-floating blue btn-large"><i class="large material-icons">format_quote</i></a>
-                </li>
-                <li><a href="#" class="btn-floating green btn-large"><i class="large material-icons">publish</i></a>
-                </li>
-                <li><a href="#" class="btn-floating orange btn-large"><i
-                            class="large material-icons">attach_file</i></a></li>
-            </ul>
+                <ul>
+                    <li><a href="#" class="btn-floating yellow btn-large"><i
+                                class="large material-icons">insert_chart</i></a></li>
+                    <li><a href="#" class="btn-floating blue btn-large"><i
+                                class="large material-icons">format_quote</i></a>
+                    </li>
+                    <li><a href="#" class="btn-floating green btn-large"><i
+                                class="large material-icons">publish</i></a>
+                    </li>
+                    <li><a href="#" class="btn-floating orange btn-large"><i
+                                class="large material-icons">attach_file</i></a></li>
+                </ul>
 
+            </div>
+            <a href="" class="waves-effect waves-teal btn-flat">button</a>
+            <h1>helpers</h1>
+            <div>
+                <h5 class="left-align">aligns left</h5>
+            </div>
+            <div>
+                <h5 class="right-align">aligns right</h5>
+            </div>
+            <div>
+                <h3 class="center-align">aligns center</h3>
+            </div>
+            <div class="left">left float</div>
+            <div class="right">right float</div>
+            <div class="center">center float</div>
+            <div class="clearfix"></div>
+            <!-- hide content -->
+
+            <div class="hide">hidden for all devices</div>
+            <div class="hide-on-med-only">hide for tablets</div>
+            <div class="hide-on-med-and-up">hide for tables and lager</div>
+            <div class="hide-on-large-only">hide for desktop</div>
+            <div class="hide-on-med and down">hide for tablets and smaller</div>
+            <div class="box">
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam,
+                recusandae quod minus deleniti nesciunt tempore voluptatem ut
+                cumque. Consequatur deleniti delectus ipsa sit alias molestias!
+                Temporibus earum dolor vitae consectetur!</p>
+            <!-- <div class="red black-text "></div> -->
+            <br><br>
         </div>
-        <a href="" class="waves-effect waves-teal btn-flat">button</a>
-        <h1>helpers</h1>
-        <div>
-            <h5 class="left-align">aligns left</h5>
-        </div>
-        <div>
-            <h5 class="right-align">aligns right</h5>
-        </div>
-        <div>
-            <h5 class="center-align">aligns center</h5>
-        </div>
-        <!-- <div class="red black-text "></div> -->
     </div>
+            <nav>
+                <div class="nav-wrapper blue">
+                    <a href="#" class="brand-logo">Logo</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <nav>
+                <div class="nav-wrapper red">
+                    <a href="#" class="brand-logo right">Logo</a>
+                    <ul id="nav-mobile" class="left hide-on-med-and-down">
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <ul id="dropdown1" class="dropdown-content">
+                <li><a href="#">homey</a></li>
+                <li><a href="#">abouti</a></li>
+                <li class="divider"></li>
+                <li><a href="#">contacta</a></li>
+            </ul>
+            <nav>
+                <div class="nav-wrapper green">
+                    <a href="#" class="brand-logo center">Logo</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="" class="dropdown-trigger btn" data-target="dropdown1">dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </div>
+            </nav>
 
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script type="text/javascript" src="./materialize.min.js"></script>
-    <script type="text/javascript" src="./script.js"></script>
-</body>
+        
+        <div style="height: 500px"></div>
+
+        <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+            crossorigin="anonymous"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script type="text/javascript" src="./materialize.min.js"></script>
+        <script type="text/javascript" src="./script.js"></script>
+    </body>
 
 </html>
